--- a/web-apps/Day_8.html
+++ b/web-apps/Day_8.html
@@ -71,6 +71,8 @@
 <li><b>Day 8</b></li>
 <li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
+<li><a href="./Day_11.html" title="Day 11" class="page">Day 11</a></li>
+<li><a href="./Day_12.html" title="Day 12" class="page">Day 12</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
