--- a/web-apps/Day_10.html
+++ b/web-apps/Day_10.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Important_Links.html'>Next</a> ]
+	[ <a href='./Day_11.html'>Next</a> ]
 </div>
 
 <hr />
@@ -71,6 +71,8 @@
 <li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
 <li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><b>Day 10</b></li>
+<li><a href="./Day_11.html" title="Day 11" class="page">Day 11</a></li>
+<li><a href="./Day_12.html" title="Day 12" class="page">Day 12</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
