--- a/web-apps/Day_11.html
+++ b/web-apps/Day_11.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Day 5</title>
+	<title>Day 11</title>
 	<meta name='Generator' content='Zim 0.68'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -51,11 +51,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Day_4.html'>Prev</a> ]
+	[ <a href='./Day_10.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Day_6.html'>Next</a> ]
+	[ <a href='./Day_12.html'>Next</a> ]
 </div>
 
 <hr />
@@ -65,13 +65,13 @@
 <li><a href="./Day_2.html" title="Day 2" class="page">Day 2</a></li>
 <li><a href="./Day_3.html" title="Day 3" class="page">Day 3</a></li>
 <li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
-<li><b>Day 5</b></li>
+<li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 <li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 <li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
 <li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
 <li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
-<li><a href="./Day_11.html" title="Day 11" class="page">Day 11</a></li>
+<li><b>Day 11</b></li>
 <li><a href="./Day_12.html" title="Day 12" class="page">Day 12</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
@@ -83,125 +83,26 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Day 5 <a name='Day 5'></a></h1>
+	<h1>Day 11 <a name='Day 11'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Tuesday 11 February 2020
+Created Tuesday 03 March 2020
 </p>
 
-<p>
-Lesson number 1, <b>global variables are poision. </b>They do pollute the global scope albeit that's not the only reason. Java makes use of them all the time. (Also remember, we have access specifiers public, protected, and private. Also default.)
-</p>
+<h3>EXAM DAY! I hope everyone did well.</h3>
 
-<p>
-<b>What is an object?</b> It's an <i>instance of a class</i> but this does not mean what you think it is. It is a member of the class of abstract data types. However, that's not what it is. An object is a block of data. It is what is built given the specifications of a class. It has member variables and methods.
-</p>
-
-<p>
-Now, why is the phrase, "<i>an object is an instance of a class" </i>wrong? Well, look at this:
-</p>
-
-<div class="zim-object">
-<pre><code class="cpp">class myclass {
-  int a;
-}
-
-class myclass2 {
-  int b;
-}</code></pre>
-</div>
-
+<br>
 <br>
 
 <p>
-The above two are both <i>instances</i> of a class. They aren't objects. They are an instance of a member of the class.
+<img src="./images/exam1-1.jpg" height="1100">
 </p>
 
 <p>
-An object is an instance of a member of a class.
-</p>
-
-<p>
-An object is built given from the definitons of a class.
-</p>
-
-<p>
-<b>An object is a block of data together with methods used for manipulating that data.</b>
-</p>
-
-<h3>Global Variables</h3>
-
-<p>
-They can be poison but there are places we must used them. However, this brings us back to the question just why they are poison? Well let's look at the following:
-</p>
-
-<div class="zim-object">
-<pre><code class="cpp">myclass class {
-  int a;
-  void method() {
-    a = 3;
-  }
-  
-  void method2() {
-    a = 3;
-  }
-}</code></pre>
-</div>
-
-<p>
-a = 3 but it should be 5. What now?
-</p>
-
-<div class="zim-object">
-<pre><code class="cpp">myclass class {
-  int a;
-  void method() {
-    a = 3;
-  }
-  a = 5;
-  
-  void method2() {
-    a = 3;
-  }
-  a = 5;
-}</code></pre>
-</div>
-
-<p>
-The problem is which method set a to 3? In fact, which method was called? Where was it called? <b>We don't know!</b> This is a huge problem. You have to use global variables in objects but it's gonna be hard to debug. As such, it's better to have them local if you can. This is one reason why we use accessor routines to figure out just who's modifying that variable and giving it the wrong value. Limit the access to variables. Or the modern buzzword <b>encapsulate.</b>
-</p>
-
-<p>
-<b>What is a function?</b> It is a set of arguments with a rule for manipulating those arguments.
-</p>
-
-<p>
-<b>RECURSION DOESN'T HAVE TO HAVE A BASE CASE. LOOK AT THE BINARY SEARCH FOR SQUARE ROOT. THERE ISN'T ANY. THERE IS A </b><u>TERMINATING CONDITION.</u><br>
-Remember, the first question we ask in recursion is, "are we there yet?"  For the count-e example, the first thing we do is ask if the tail is empty. Is the tail equal to the empty list?
-</p>
-
-<div class="zim-object">
-<pre><code class="scheme">(define ctr (lambda (mylist)(
-  (if (eq? (cdr mylist) (list )) 0
-  (if (eq? (car mylist) "e" )
-    (+ 1 (ctr (cdr mylist)))
-    (ctr (cdr mylist)))))))</code></pre>
-</div>
-
-<br>
-
-<p>
-It has been the programmers job to do whatever the systems analyst told them to. Convert instructions from common language to machine code. The systems analyst was well paid and the programmers were alright. They didn't need much schooling either. Over time, there was a shortage of coders and systems analysts started writing their own code. <i>This was a mistake.</i> Today's classes combine problem solving with coding. This is a bit of a problem. You have to pay attention to controlling a machine while solving a problem. This is difficult to juggle. With an imperative language, you are constantly being distracted by little details such as allocating memory. What does that have to do with your problem? It's a distraction! What is important is to separate the two if you can.
-</p>
-
-<p>
-This was the point of the orange pyramid problem. You'd think you just need to solve it recursively but then suddenly it gets a little complicated. Suddenly, you need to step away from the code and focus on the problem itself.
-</p>
-
-<p>
-There is a book our professor recommends we read called: <b>George Polya - How to Solve It. Princeton University Press.</b>
+<img src="./images/exam1-2.jpg" height="1100"><br>
+<img src="./images/exam1-3.jpg" height="1100">
 </p>
 
 	</div>
