added day 6 of special topics notes

--- a/special-topics/Day_5.html
+++ b/special-topics/Day_5.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./Day_6.html'>Next</a> ]
 </div>
 
 <hr />
@@ -67,6 +67,7 @@
 <li><a href="./Day_3.html" title="Day 3" class="page">Day 3</a></li>
 <li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
 <li><b>Day 5</b></li>
+<li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 </ul>
 
 </div>
