--- a/special-topics/Day_4.html
+++ b/special-topics/Day_4.html
@@ -67,6 +67,7 @@
 <li><a href="./Day_3.html" title="Day 3" class="page">Day 3</a></li>
 <li><b>Day 4</b></li>
 <li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
+<li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 </ul>
 
 </div>
