added missing images

--- a/architecture/Midterm_Review.html
+++ b/architecture/Midterm_Review.html
@@ -738,14 +738,14 @@ Very simple. Just use a single NAND and plug the variable into it twice.
 
 <p>
 Use logisim to show that the <b>Associative Law</b> holds.<br>
-<img src="./labs/lab3/images/question9.png">
+<img src="./images/question9.png">
 </p>
 
 <h3>Question 10</h3>
 
 <p>
 Use logisim to show that the <b>Distributive Law</b> holds.<br>
-<img src="./labs/lab3/images/question10.png">
+<img src="./images/question10.png">
 </p>
 
 <h1>Chapter 3B Logisim Labwork</h1>
