added missing pages from web apps

--- a/web-apps/Day_12.html
+++ b/web-apps/Day_12.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Important_Links.html'>Next</a> ]
+	[ <a href='./Day_13.html'>Next</a> ]
 </div>
 
 <hr />
@@ -73,6 +73,13 @@
 <li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
 <li><a href="./Day_11.html" title="Day 11" class="page">Day 11</a></li>
 <li><b>Day 12</b></li>
+<li><a href="./Day_13.html" title="Day 13" class="page">Day 13</a></li>
+<li><a href="./Day_14.html" title="Day 14" class="page">Day 14</a></li>
+<li><a href="./Day_15.html" title="Day 15" class="page">Day 15</a></li>
+<li><a href="./Day_16.html" title="Day 16" class="page">Day 16</a></li>
+<li><a href="./Day_17.html" title="Day 17" class="page">Day 17</a></li>
+<li><a href="./Day_18.html" title="Day 18" class="page">Day 18</a></li>
+<li><a href="./Exam_II_Review.html" title="Exam II Review" class="page">Exam II Review</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
@@ -162,11 +169,11 @@ Q13) Java requires a virtual machine. Poor memory management is also true. No po
 </p>
 
 <p>
-Q14) Scheme program time. I'll attach an image for this one. (He does wonder why some of us ended at 0 instead of 1. I terminated at 0 but I forget if I ran through the exponent. I don't believe I did).
+Q14) Scheme program time. I'll attach an image for this one. (He does wonder why some of us ended at 0 instead of 1. I terminated at 0 but I forget if I ran through the exponent. I don't believe I did). I ended up getting full credit regardless. Check out page <a href="./Day_11.html" title="Day 11" class="page">Day 11</a> to see my answer.
 </p>
 
 <p>
-Q15) Declarative, imperative, and OOP
+Q15) Declarative, imperative, and OOP.
 </p>
 
 <p>
@@ -178,6 +185,11 @@ Q16) Keep a history of a project.
 	<br />
 
 	<div class='page-footer'>
+		<b>Backlinks:</b>
+
+		<a href='./Exam_II_Review.html'>Exam II Review</a>
+
+		<br /><br />
 
 	</div>
 
