--- a/web-apps/Introduction.html
+++ b/web-apps/Introduction.html
@@ -73,6 +73,13 @@
 <li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
 <li><a href="./Day_11.html" title="Day 11" class="page">Day 11</a></li>
 <li><a href="./Day_12.html" title="Day 12" class="page">Day 12</a></li>
+<li><a href="./Day_13.html" title="Day 13" class="page">Day 13</a></li>
+<li><a href="./Day_14.html" title="Day 14" class="page">Day 14</a></li>
+<li><a href="./Day_15.html" title="Day 15" class="page">Day 15</a></li>
+<li><a href="./Day_16.html" title="Day 16" class="page">Day 16</a></li>
+<li><a href="./Day_17.html" title="Day 17" class="page">Day 17</a></li>
+<li><a href="./Day_18.html" title="Day 18" class="page">Day 18</a></li>
+<li><a href="./Exam_II_Review.html" title="Exam II Review" class="page">Exam II Review</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><b>Introduction</b></li>
 </ul>
