--- a/web-apps/Day_14.html
+++ b/web-apps/Day_14.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Day 8</title>
+	<title>Day 14</title>
 	<meta name='Generator' content='Zim 0.68'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -51,11 +51,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Day_7.html'>Prev</a> ]
+	[ <a href='./Day_13.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Day_9.html'>Next</a> ]
+	[ <a href='./Day_15.html'>Next</a> ]
 </div>
 
 <hr />
@@ -68,13 +68,13 @@
 <li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 <li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 <li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
-<li><b>Day 8</b></li>
+<li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
 <li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
 <li><a href="./Day_11.html" title="Day 11" class="page">Day 11</a></li>
 <li><a href="./Day_12.html" title="Day 12" class="page">Day 12</a></li>
 <li><a href="./Day_13.html" title="Day 13" class="page">Day 13</a></li>
-<li><a href="./Day_14.html" title="Day 14" class="page">Day 14</a></li>
+<li><b>Day 14</b></li>
 <li><a href="./Day_15.html" title="Day 15" class="page">Day 15</a></li>
 <li><a href="./Day_16.html" title="Day 16" class="page">Day 16</a></li>
 <li><a href="./Day_17.html" title="Day 17" class="page">Day 17</a></li>
@@ -90,123 +90,16 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Day 8 <a name='Day 8'></a></h1>
+	<h1>Day 14 <a name='Day 14'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Thursday 20 February 2020
+Created Friday 13 March 2020
 </p>
 
 <p>
-We are starting the day with a handout. It has an example working handout.
-</p>
-
-<p>
-Remember, clunky code that works always jumps amazing, excellent, elegant, beautiful code that doesn't.
-</p>
-
-<p>
-Select advanced student in DrRacket if you don't want to see cons being spammed when you make a list. Guile on the other hand would shorten (list a b c) to (a b c). Keep that in mind. It's a short hand for the list.
-</p>
-
-<h3>SVN</h3>
-
-<p>
-You don't have to mention the directory name if you're already inside of there (I believe he meant that for SVN).
-</p>
-
-<p>
-Also, you can do hyphen f instead of manually creating tags, branches, and trunk.
-</p>
-
-<p>
-You'll find that these directories are necessary for any reasonable version control system. They are there <i>somewhere</i> but their location may not be so easy.
-</p>
-
-<h3>Algol-60</h3>
-
-<p>
-This was an old language designed for communicating algorithms. ACM (Association for Computing Machinery) published a periodical in which people could submit algorithms. The required language of these submissions was Algol-60. Algol-60 was popular in Europe for a while too.
-</p>
-
-<p>
-Recurrsion was built right into Algol-60.
-</p>
-
-<p>
-We don't have a decent way of defining all of the semantics of a programming language.
-</p>
-
-<p>
-PL/1 by IBM is a pretty nice language our professor states. Easy to work with, code is efficient, and has nice tools to assist a programmers efforts. You can turn on bounds checking for arrays which checks if references are in bounds. However, this adds a lot of overhead to our computing. However, we have the option to turn it off. Best of both worlds. We can have an <i>interupt</i> which, I believe he said, allows us to turn it on temporarily. Or we could just let the whole thing crash.
-</p>
-
-<p>
-<i>Take a look at Algol-60's specification language. </i>In fact, XML (extensible markup language) is an <i>extension</i> of a language known as BNF (Backus-Nauer Form. They were the names of the inventors of the language). In fact, BNF only has two symbols which are ::=. This can be just read as <i>is.</i>
-</p>
-
-<p>
-So then, we get this where | is OR and &lt;foo&gt; is metalanguage:
-</p>
-<div class="zim-object">
-<pre><code class="c">&lt;letter&gt; ::= a|b|c</code></pre>
-</div>
-
-<br>
-
-<p>
-The &lt;&gt; are considered a to be a simple modern approach. Look at this:
-</p>
-<div class="zim-object">
-<pre><code class="c">&lt;integer&gt; ::= digit | &lt;integer&gt;&lt;digit&gt;
-&lt;digit&gt; ::= 0|1|2|3|4|5|6|7|8|9</code></pre>
-</div>
-
-<p>
-So then, an integer is a digit or an integer followed by another digit. Isn't it nice and simple? The only thing that might throw you off is the <b>recursion</b> implied in &lt;integer&gt;. Notice how we can just keep adding digit after digit after digit.
-</p>
-
-<p>
-Sadly, BNF does have some shortcomings. For example <i>it can't count!</i>
-</p>
-
-<p>
-<b>Think about how you'd use BNF for some business application.</b> How about in this simple form? Think about it. It can be done!
-</p>
-
-<h3>QA</h3>
-
-<p>
-QA should be using SVN or something I believe.
-</p>
-
-<h3>Steam</h3>
-
-<p>
-Add the specs document to the repository.
-</p>
-
-<h3>Exam</h3>
-
-<p>
-It is March 3rd. <b>Give up hope that this will be a multiple choice exam.</b>
-</p>
-
-<h3>Homework</h3>
-
-<p>
-Find a program that has <b>at least two source files!</b> At least 2 .cpp, .java, or .c files that can be separately compile. Compile them separately then fuse them together into a single .exe file (or jar if doing java). For those two files, use whatever you want. You don't have to even write them if you don't want to.
-</p>
-
-<p>
-Also, don't forget to read those chapters on the GNU website! Refer to to <a href="./Day_7.html" title="Day 7" class="page">Day 7</a> homework for details.
-</p>
-
-<h5>Exam HW</h5>
-
-<p>
-You must come in with three questions. <b>Come in with three question next Thursday! </b>That is, <b>2/27/2020. </b>Question you do want to see, you don't want to see, and 
+No class. Corona Virus has placed our school under a recess between the 12th and 19th. All schooling is switching to a distance learning model. This is happening to all CUNY and SUNY schools. Stay safe everyone o7
 </p>
 
 	</div>
